--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dynaconf = "^3.2.6"
 requests = "^2.32.3"
 uvicorn = "^0.32.1"
 types-requests = "^2.32.0.20241016"
+typer = "^0.15.1"
 
 
 [build-system]
